General: Fix download button list on mobile.

--- a/assets/less/new/components/buttons.less
+++ b/assets/less/new/components/buttons.less
@@ -189,7 +189,6 @@ button:hover::after {
 
 // Make the smart download button a bit larger
 .download-button {
-  margin: 2rem;
   .btn-download {
     font-size: var(--font-lg);
     font-weight: 400;
